--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "memory-fs": "^0.3.0",
-    "webpack": "^1.12.9"
-  },
   "devDependencies": {
-    "mocha": "^2.3.4"
+    "memory-fs": "^0.3.0",
+    "mocha": "^2.3.4",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "test": "mocha --ui tdd test/"
