--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "test": "test"
   },
+  "dependencies": {
+    "loader-utils": "^0.2.12"
+  },
   "devDependencies": {
     "memory-fs": "^0.3.0",
     "mocha": "^2.3.4",
